--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,10 @@
 					<groupId>junit</groupId>
 					<artifactId>junit</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-enforcer-plugin</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
