--- a/pom.xml
+++ b/pom.xml
@@ -118,8 +118,8 @@
 					<artifactId>maven-resources-plugin</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>log4j</groupId>
-					<artifactId>log4j</artifactId>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
 				</exclusion>
 				<exclusion>
 					<groupId>junit</groupId>
