--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,10 @@
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-ext</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>com.vaadin.external.google</groupId>
+					<artifactId>android-json</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
