--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.basedir}/lib</outputDirectory>
+							<outputDirectory>/openapi/virtualan/lib</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
@@ -131,11 +131,5 @@
 		</dependency>
 		<!-- END Virtual Service API support -->
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.10.5.1</version>
-			<scope>provided</scope>
-		</dependency>
 	</dependencies>
 </project>
