Updated with latest dependency

--- a/src/main/resources/virtualan.properties
+++ b/src/main/resources/virtualan.properties
@@ -1,4 +1,2 @@
-srcFolder=/conf/source
-destFolder=/conf/classes
 dependencyFolder=/openapi/virtualan/lib
-yamlFolder=/conf/yaml
+default-path=/conf
