--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.aop.proxy-target-class=true
 #Automatic agent shutdown
 #spring.aop.auto=false
 server.port=8800
-spring.resources.static-locations=classpath:file:/conf/classes
+spring.resources.static-locations=file:/conf
+virtualan.application.name=Virtualization Service
+
