--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>/openapi/virtualan/lib</outputDirectory>
+							<outputDirectory>${project.basedir}/lib</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
