--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=8800
 spring.resources.static-locations=file:/conf
 virtualan.application.name=Virtualization Service
 
+
+# Embedded ActiveMQ Configuration Example
+spring.activemq.broker-url=vm://embedded
+spring.activemq.in-memory=true
+spring.activemq.pool.enabled=false
