--- a/src/main/resources/application-run.properties
+++ b/src/main/resources/application-run.properties
@@ -2,9 +2,11 @@ spring.aop.proxy-target-class=true
 #Automatic agent shutdown
 #spring.aop.auto=false
 server.port=8800
-spring.resources.static-locations=file:/conf
-virtualan.application.name=Virtualization Service
+spring.resources.static-locations=file:/config
+virtualan.application.name=Service Virtualization 
 
+enable.kafka=true
+enable.amq=true
 
 # Embedded ActiveMQ Configuration Example
 spring.activemq.broker-url=vm://embedded
