Updated new release version

--- a/src/main/resources/application-run.properties
+++ b/src/main/resources/application-run.properties
@@ -2,7 +2,7 @@ spring.aop.proxy-target-class=true
 #Automatic agent shutdown
 #spring.aop.auto=false
 server.port=8800
-spring.resources.static-locations=file:/config
+spring.resources.static-locations=file:/conf
 virtualan.application.name=Service Virtualization 
 
 enable.kafka=true
