--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<packaging>jar</packaging>
 	<name>virtualan-virtualization-service</name>
 	<version>1.0.0</version>
-	<description>Service virtualization </description>
+	<description>Virtualan service</description>
 	<properties>
 		<kafka-clients.version>2.8.0</kafka-clients.version>
 		<virtualan.version>1.1.5</virtualan.version>
