--- a/pom.xml
+++ b/pom.xml
@@ -169,5 +169,30 @@
 		</dependency>
 		<!-- End -->
 
+		<!-- Different JAVA RDBMS Driver support -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.26</version>
+		</dependency>
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc10</artifactId>
+			<version>19.12.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.23</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.ibm.db2</groupId>
+			<artifactId>jcc</artifactId>
+			<version>11.5.6.0</version>
+		</dependency>
+
+		<!-- END  -->
 	</dependencies>
 </project>
